# Changelog

## additions
- shinigami's now get base attack damage increase if putting stats in hakuda
- quincy robe
### lots of small QoL changes to the player review screen
- everything you hover has a tooltip
- tooltips got changed for more clarifications
- races that did not have tooltips have it now


## changes
- 1 blut point = 0.02 extra base damage -> 1 blut point = 0.1 extra base damage

## fixed
- quincy pants not rendering when put on

## misc
