@@ -5,6 +5,7 @@ import com.yuanno.soulsawakening.data.entity.IEntityStats;
 import com.yuanno.soulsawakening.entity.PlusEntity;
 import com.yuanno.soulsawakening.entity.goal.ImprovedMeleeAttackGoal;
 import com.yuanno.soulsawakening.init.ModAttributes;
+import com.yuanno.soulsawakening.init.ModConfig;
 import com.yuanno.soulsawakening.init.ModValues;
 import com.yuanno.soulsawakening.items.blueprints.ZanpakutoItem;
 import net.minecraft.entity.*;
@@ -52,7 +53,7 @@ public class ThornsEntity extends HollowEntity implements IBleach {
                 .add(Attributes.ATTACK_DAMAGE, 5)
                 .add(Attributes.ARMOR, 10)
                 .add(Attributes.MAX_HEALTH, 35)
-                .add(Attributes.FOLLOW_RANGE, 75)
+                .add(Attributes.FOLLOW_RANGE, ModConfig.HOLLOW_FOLLOWRANGE.get())
                 .add(Attributes.MOVEMENT_SPEED, 0.305)
                 .add(ModAttributes.ATTACK_RANGE.get(), 0.5)
                 .add(ModAttributes.FALL_RESISTANCE.get(), 50);
