@@ -7,10 +7,16 @@
 - everything you hover has a tooltip
 - tooltips got changed for more clarifications
 - races that did not have tooltips have it now
-
+### blocks with recipes
+- hollow sandstone
+- hollow sandstone slab
+- hollow sandstone stairs
+- hollow sandstone walls
+- config for follow range of hollows
 
 ## changes
 - 1 blut point = 0.02 extra base damage -> 1 blut point = 0.1 extra base damage
+- default follow range hollows 75 -> 50
 
 ## fixed
 - quincy pants not rendering when put on
